# khess

./: CMakeLists.txt
.cache/clangd/index/: board.h.908675C0CCAE7104.idx  cbconst.c.20FEB1FDC3E93272.idx  cbconst.h.2469131D949F28F1.idx  cblib.c.9B996953DC1B2E33.idx  cblib.h.B912D2ADEE2C2636.idx  cibyl.c.AE42D8F2BE813700.idx  cibyl.h.ABCDD3BE90FCE8E6.idx  debug.c.5E7A39CE19D7C2C6.idx  gen.c.0E7DC30E42789F4F.idx  gen.h.EB65B134ABC46AF4.idx  history.h.5129607EAEE18C4D.idx  kcsrv.c.9D437AFF6E9B23F0.idx  kcsrv.h.87726D3BF39C9CC0.idx  khess.c.8B535044714F8B61.idx  khess.h.E5128CCEBFFEB8FE.idx  magical.c.FE5FC5CA4582B76D.idx  move.h.EEC2A3D135180834.idx  normal.c.AAAA3267667F347B.idx  tables.h.B29A130358A627FF.idx
include/cblib/: bitboard.h  board.h  board_const.h  cb_history.h  cb_lib.h  cb_tables.h  cb_types.h  cbconst.h  cbdbg.h  cblib.h  const.h  error.h  gen.h  history.h  mailbox.h  move.h  tables.h  types.h
include/cblib/board/: bitboard.h  board.h  history.h  mailbox.h
include/cblib/tables/: tables.h
include/cibyl/: cibyl.h  engine.h  eval.h  logging.h  uci.h
include/common/: kh_logging.h  posix_error.h
include/debug/: perft.h
include/kcsrv/: kcsrv.h
include/khess/: khess.h
src/cblib/: cb_lib.c  cb_magical.c  cbconst.c  cbdbg.c  cblib.c  const.c  dbg.c  gen.c  magical.c  normal.c
src/cblib/tables/: tables.c
src/cibyl/: cibyl.c  cibyl_posix.c  engine.c  eval.c  logging.c  perft.c  uci.c
src/common/: kh_logging.c
src/debug/: debug.c  perft.c
src/kcsrv/: kcsrv.c
src/khess/: khess.c
src/knet-prot/: knet-protocol.md  knet_protocol.h  server.h
tools/: perft.py  perft_find_error.py
